showcase -> product images made

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./style/style.css">
-
+  <script src="./main.js" defer></script>
   <title>Frontend Mentor | E-commerce product page</title>
 </head>
 
 <body>
 
-
+  <!-- start header -->
   <header id="header">
     <div class="container">
       <div class="header-body">
@@ -48,9 +48,40 @@
       </div>
     </div>
   </header>
+  <!-- end header -->
 
 
-
+  <!-- start showcase -->
+  <section id="showcase">
+    <div class="container">
+      <div class="showcase-body">
+        <!-- imgs -->
+        <div class="product-imgs">
+          <div class="product-img">
+            <img src="./images/image-product-1.jpg" alt="product">
+          </div>
+          <!-- thumbnails -->
+          <div class="thumbnails">
+            <div class="thumbnail active">
+              <img src="./images/image-product-1-thumbnail.jpg" alt="product image">
+            </div>
+            <div class="thumbnail">
+              <img src="./images/image-product-2-thumbnail.jpg" alt="product image">
+            </div>
+            <div class="thumbnail">
+              <img src="./images/image-product-3-thumbnail.jpg" alt="product image">
+            </div>
+            <div class="thumbnail">
+              <img src="./images/image-product-4-thumbnail.jpg" alt="product image">
+            </div>
+          </div>
+        </div>
+        <!-- details -->
+        <div class="product-content"></div>
+      </div>
+    </div>
+  </section>
+  <!-- end showcase -->
 
 
 
