--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Meqdad Moradi</a>.
   </div>
+
 </body>
 
 </html>
