--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <header id="header">
     <div class="container">
       <div class="header-body">
+        <div class="mobile-menu">
+          <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg">
+            <path d="M16 12v3H0v-3h16Zm0-6v3H0V6h16Zm0-6v3H0V0h16Z" fill="#69707D" fill-rule="evenodd" /></svg>
+        </div>
         <div class="logo-wrapper">
           <a href="./index.html">
             <svg class="logo" width="138" height="20" xmlns="http://www.w3.org/2000/svg">
@@ -139,6 +143,45 @@
   </section>
   <!-- end showcase -->
 
+
+  <!-- start lightbox -->
+  <section class="lightbox">
+    <div class="container">
+      <div class="close">
+        <svg class="close-btn" width="14" height="15" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z"
+            fill-rule="evenodd" /></svg>
+      </div>
+      <div class="product-img">
+        <img src="./images/image-product-1.jpg" alt="product">
+        <div class="next">
+          <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg">
+            <path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd" /></svg>
+        </div>
+        <div class="prev">
+          <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg">
+            <path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd" /></svg>
+        </div>
+      </div>
+      <!-- thumbnails -->
+      <div class="thumbnails">
+        <div class="thumbnail active">
+          <img src="./images/image-product-1-thumbnail.jpg" alt="product image">
+        </div>
+        <div class="thumbnail">
+          <img src="./images/image-product-2-thumbnail.jpg" alt="product image">
+        </div>
+        <div class="thumbnail">
+          <img src="./images/image-product-3-thumbnail.jpg" alt="product image">
+        </div>
+        <div class="thumbnail">
+          <img src="./images/image-product-4-thumbnail.jpg" alt="product image">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end lightbox -->
 
 
   <div class="attribution">
