--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="./design/desktop-design.jpg" alt="">
+    <img src="./design/active-states-basket-filled.jpg" alt="">
 </body>
 
 </html>
